# kernel_agent

./: README.md  kernel_optimizer.py  main.py  pyproject.toml  results.json
agents/: kernel_optimizer.py
factories/: hardware_detector_factory.py  kernel_executor_factory.py
interfaces/: hardware_detector.py  kernel_executor.py
models/: kernel.py
services/: hardware_configs.py  kernel_executors.py
