[project]
name = "kernel_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "black>=25.1.0",
  "click>=8.1.8",
  "langchain>=0.3.19",
  "langchain-openai>=0.3.7",
  "langgraph>=0.2.74",
  "mypy>=1.15.0",
  "numpy>=2.2.3",
  "rich>=13.9.4",
  "ruff>=0.9.7",
  "typing>=3.10.0.0",
]
